@@ -5,8 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 27-11-2004 added: flash Kai chat tab briefly when another player sends message while tab not currently selected.
   - 27-11-2004 fixed: some memory leaks in the database code.
-  - 27-11-2004 Added: GUIConditionalButton
+  - 27-11-2004 added: GUIConditionalButton
   - 27-11-2004 added: albuminfo, songs from allmusic.com are saved to database
   - 26-11-2004 added: Use left and right trigger to change between Kai views.
   - 26-11-2004 added: XLink Kai tabbed view.
